2013-01-31 Marcel Huber <marcel.huber@hsr.ch>

      
      changed to using /bin/sh as service executor

      this simplifies configuration as only /etc/conf.d/jenkins needs to be 
      adjusted for options or a different JVM

      Change-Id: I47be4e7709a1836e8ae4abca9716e2548997fcd2


2013-01-27 Build User <jenkins@coast-project.org>

      jenkins-ci-1.500-1:
      PKGBUILD prepared for new jenkins-ci version 1.500


2013-01-24 Marcel Huber <marcelhuberfoo@gmail.com>

      jenkins-ci-1.499-2:
      Disabling systemd service during update to fix potential

      problems when replacing the service file

      Change-Id: Ic4d4162d1520b3300bceacfee92eb9abdfabd899


2013-01-23 Marcel Huber <marcelhuberfoo@gmail.com>

      jenkins-ci-1.499-1:
      applied corrections as suggested by users of the package

      removed support for non-systemd systems

      using dialog to ask inputs from the installer

      Change-Id: Ib8f813eba71e24ad3bb1fa46f96f74dc9f01d22b


2012-11-19 Build User <jenkins@coast-project.org>

      jenkins-ci-1.491-1:
      PKGBUILD prepared for new jenkins-ci version 1.491


2012-11-13 Build User <jenkins@coast-project.org>

      jenkins-ci-1.490-1:
      PKGBUILD prepared for new jenkins-ci version 1.490


2012-11-04 Build User <jenkins@coast-project.org>

      jenkins-ci-1.489-1:
      PKGBUILD prepared for new jenkins-ci version 1.489


2012-10-29 Build User <jenkins@coast-project.org>

      jenkins-ci-1.488-1:
      PKGBUILD prepared for new jenkins-ci version 1.488


2012-10-24 Build User <jenkins@coast-project.org>

      jenkins-ci-1.487-1:
      PKGBUILD prepared for new jenkins-ci version 1.487


2012-10-15 Build User <jenkins@coast-project.org>

     
      PKGBUILD prepared for new jenkins-ci version 1.486


2012-10-08 Build User <jenkins@coast-project.org>

      jenkins-ci-1.485-1:
      PKGBUILD prepared for new jenkins-ci version 1.485


2012-10-01 Build User <jenkins@coast-project.org>

      jenkins-ci-1.484-1: