@@ -1,13 +1,13 @@
 # Maintainer: Umberto Reale <realeumberto@gmail.com>
 
 pkgname=aurinstaller-git
-pkgver=20130207
+pkgver=20130212
 pkgrel=1
 pkgdesc="A full of bugs bash AUR helper." 
 arch=('any')
 url="https://github.com/umby213/aurinstaller"
 license=('GPL')
-depends=('wget' 'jshon')
+depends=('jshon')
 makedepends=('git')
 
 _gitroot="git://github.com/umby213/aurinstaller.git"
