@@ -8,7 +8,7 @@
 
 # Maintainer: Yuki Chiba <yuki.from.akita@gmail.com>
 pkgname=emacs-navi2ch-git
-pkgver=20121110
+pkgver=20130212
 pkgrel=1
 pkgdesc="A '2ch bbs' browser worked on Emacsen."
 arch=( 'any' )
