@@ -16,7 +16,8 @@ makedepends=('gtk-doc'
              'gnome-common'
              'gnome-doc-utils'
              'gobject-introspection'
-             'intltool')
+             'intltool'
+             'exo')
 conflicts=('lightdm-gtk-greeter-osk'
            'lightdm-gtk-greeter-bzr'
            'lightdm-another-gtk-greeter'
