@@ -9,9 +9,9 @@ true && pkgname=(linux-grsec-lts linux-grsec-lts-headers)
 _kernelname=${pkgname#linux}
 _basekernel=3.2
 _grsecver=2.9.1
-_timestamp=201302061906
+_timestamp=201302112313
 pkgver=${_basekernel}.38
-pkgrel=1
+pkgrel=2
 arch=(i686 x86_64)
 url="http://www.kernel.org/"
 license=(GPL2)
@@ -35,7 +35,7 @@ source=(
 sha256sums=(
   dd96ed02b53fb5d57762e4b1f573460909de472ca588f81ec6660e4a172e7ba7
   b591c2d530db914649f891b551420a8e0125caf33a0393f96620b9c8cb7fd3d0
-  a9790df243df400d966ba31e38407c53dfe36dfb6684757ef42bb5e5d6aff7b7
+  0292232aa37c59accf69c71dbb0b643b97e4e1cedfd8271196d8a1068ce0595b
   b338f9bd72ebafee690bd020f3d4e7b48a0495b6aa3e67010367887a587f811b
   6adadef9472281dcee8a975a2ac392cc0f668659c54fd506018e9892eb45b933
   e5ba8179245b565851f76b54c16f8aa514cbda0fdd165d96446abdc49d6c0687
