@@ -33,8 +33,8 @@ pkgname=linux-uksm-ck
 true && pkgname=(linux-uksm-ck linux-uksm-ck-headers)
 _kernelname=-uksm-ck
 _srcname=linux-3.7
-pkgver=3.7.6
-pkgrel=2
+pkgver=3.7.7
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://kerneldedup.org/"
 license=('GPL2')
@@ -62,7 +62,7 @@ source=(
         )
         
 sha256sums=('60a64d0bf76eeec3355f115c577935757b84629c8c129ce5b8bb02075f6b9458'
-            'fd75d3ff0cc46f1f025eb2129c1e60ad305242efd4df01662668a82fee36bb2f'
+            '8c84f79faa95f77ac2890b341e658e93874540021ca44f1f32f322bfb776c0bd'
             '525d31f777e650f0bed604a66e8cbbb2993fe56cd2bc0b36a1dc8f1f8a3d24b7'
             '231f4d85b1196507b9201d74694701785d8dd5902158e9444b2ba5e96421f0fe'
             '11183d20458fe662ceffcc2a0caa14200a0ec630e62ec109ad258cb4e005df5e'
