@@ -31,7 +31,7 @@ pkgname=linux-uksm
 true && pkgname=(linux-uksm linux-uksm-headers)
 _kernelname=-uksm
 _srcname=linux-3.7
-pkgver=3.7.6
+pkgver=3.7.7
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://kerneldedup.org/"
@@ -353,7 +353,7 @@ package_linux-uksm-headers() {
 # Global pkgdesc and depends are here so that they will be picked up by AUR
 pkgdesc='Linux Kernel and modules with the UKSM patchset featuring the  v1.2.2.'
 md5sums=('21223369d682bcf44bcdfe1521095983'
-         'ec61c44f37585a768d41c0439101ef9c'
+         'e232d2535bbd36fe05c203bacc5b72ea'
          '1c2c5ac96842343a189e5e21e184ef7d'
          'ca3e4c482af0f0514aaa81943f1d65e7'
          '9d3c56a4b999c8bfbd4018089a62f662'
