@@ -1,5 +1,5 @@
 KERNEL_NAME=-uksm
-KERNEL_VERSION=3.7.6-1-uksm
+KERNEL_VERSION=3.7.7-1-uksm
 
 # set a sane PATH to ensure that critical utils like depmod will be found
 export PATH='/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
