@@ -16,7 +16,7 @@ source=("http://download.kde.org/unstable/plasmate/$_pkgver/src/$pkgname-$_pkgve
 md5sums=('cde8c010042afc9d0591fa701912d706')
 
 build() {
-  cd $pkgname
+  cd $pkgname-$_pkgver
   mkdir build
   cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
@@ -24,6 +24,6 @@ build() {
 }
 
 package() {
-  cd $pkgname/build
+  cd $pkgname-$_pkgver/build
   make DESTDIR=${pkgdir} install
 }
