@@ -2,7 +2,7 @@
 # Maintainer: Paul Gideon Dann <pdgiddie_at_gmail.com>
 
 pkgname=poppler-qt-lcd
-pkgver=0.22.0
+pkgver=0.22.1
 pkgrel=1
 provides=('poppler-qt=$pkgver')
 conflicts=('poppler-qt')
@@ -17,7 +17,7 @@ source=(http://poppler.freedesktop.org/poppler-${pkgver}.tar.gz
         0002-Setting-default-Qt4-backend-to-Cairo.patch
         0003-Forcing-subpixel-rendering-in-Cairo-backend.patch
         0004-Don-t-build-the-main-poppler-library.patch)
-md5sums=('c7038be37a7d446544e83a7df3c26196'
+md5sums=('50c259fdda538c1ba94b62aa25f7ec87'
          '410330f30ebd7155423ce7f4e1dee67b'
          'fdcc2666bb13520bc74fe51b49a5c8b3'
          'c3770c113dbb551c23c02a2564376f0e'
