@@ -38,7 +38,7 @@ build() {
     else
         git clone --depth=1 $_gitroot $_gitname || return 1
         cd ${srcdir}/$_gitname
-        git checkout -B clang_feb2013 origin/clang_feb2013
+        git checkout -b clang_feb2013 origin/clang_feb2013
     fi
 
     msg "GIT checkout done or server timeout"
