@@ -1,6 +1,12 @@
-2013-01-31 Marcel Huber <marcel.huber@hsr.ch>
+2013-02-12 Build User <jenkins@coast-project.org>
 
       
+      PKGBUILD prepared for new jenkins-ci version 1.501
+
+
+2013-01-31 Marcel Huber <marcel.huber@hsr.ch>
+
+      jenkins-ci-1.500-2:
       changed to using /bin/sh as service executor
 
       this simplifies configuration as only /etc/conf.d/jenkins needs to be 
